--- a/level-2/step-2/step-2.css
+++ b/level-2/step-2/step-2.css
@@ -1,14 +1,16 @@
 /* Step-2 add a text-align that will align items in the center.  */
 .main-bottom-section {
   margin-top: 65px;
+  padding-left: 20px;
+  padding-right: 20px;
   /* alignment property */
 }
 
 /* Step-2 Add a width, height and display property to make these containers look like the design. */
 .item {
-   /*width*/
-    /*height*/
-    /*display*/
+    width: 45%;
+    height: 200px;
+    display: inline-grid;
     margin: 0 20px 30px;
     background: #DED6D3;
     margin-bottom: 30px;
@@ -16,19 +18,16 @@
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .full-width-item {
-    /*width*/
-    /*height*/
-    /*margin*/
-    margin:0 auto 30px;
+    width: auto;
+    height: 200px;
     background: #DED6D3;
 }
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .large-item {
-    /*width*/
-    /*height*/
-    /*margin*/
+    width: auto;
+    height: 400px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background: #DED6D3;
 }
-
-
